# ByteForge

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
assets/: LICENSE
src/: ByteForge.rc  main.cpp
src/ProgressBar/: ProgressBar.cpp  ProgressBar.h
